# repulsive-surfaces

./: .gitignore  .gitmodules  CMakeLists.txt  PMTools.m  Profiler.nb  README.md  autorun_list.sh  make_mp4.sh  make_speedup_mp4.sh  mp4_to_gif.sh  overlay_image.sh  overlay_text.sh  repulsive-surfaces.code-workspace  timings.txt
cmake_modules/: FindMKL.cmake  FindTBB.cmake
include/: all_pairs_tpe.h  bct_constructors.h  bct_kernel_type.h  block_cluster_tree.h  block_cluster_tree2.h  block_cluster_tree2_types.h  cluster_tree2.h  consistency_helpers.h  cut_off_bct.h  derivative_assembler.h  dropdown_strings.h  fractional_laplacian.h  helpers.h  interaction_data.h  line_search.h  main.h  main2.h  main_consistency.h  main_picking.h  main_remesh.h  main_runtest.h  matrix_utils.h  metric_term.h  obj_writer.h  optimized_bct.h  optimized_bct_types.h  optimized_cluster_tree.h  profiler.h  rsurface_types.h  scene_file.h  sobolev_matrices.h  surface_derivatives.h  surface_energy.h  surface_flow.h  tpe_energy_surface.h  vertex_data_wrapper.h
include/deprecated/: all_pairs_tpe.h  barnes_hut_tpe_6d.h  static_obstacle.h
include/energy/: all_energies.h  all_pairs_tpe.h  all_pairs_with_bvh.h  barnes_hut_newtonian.h  barnes_hut_tpe.h  barnes_hut_tpe_6d.h  barnes_hut_tpe_xdiff.h  boundary_curvature.h  boundary_length.h  coulomb.h  implicit_attractor.h  implicit_obstacle.h  soft_area_constraint.h  soft_volume_constraint.h  squared_error.h  static_obstacle.h  total_area_potential.h  total_volume_potential.h  tp_obstacle_all_pairs.h  tp_obstacle_all_pairs_pr.h  tp_obstacle_barnes_hut_0.h  tp_obstacle_barnes_hut_pr_0.h  tp_obstacle_cut_off.h  tp_obstacle_multipole_0.h  tp_obstacle_multipole_nl_0.h  tp_obstacle_multipole_pr_0.h  tp_pointcloud_obstacle_barnes_hut_0.h  tp_pointnormalcloud_obstacle_barnes_hut_0.h  tpe_all_pairs.h  tpe_all_pairs_pr.h  tpe_barnes_hut_0.h  tpe_barnes_hut_pr_0.h  tpe_cut_off.h  tpe_energy_surface.h  tpe_kernel.h  tpe_multipole_0.h  tpe_multipole_nl_0.h  tpe_multipole_pr_0.h  willmore_energy.h
include/implicit/: implicit_surface.h  simple_surfaces.h
include/remeshing/: dynamic_remesher.h  remeshing.h
include/sobolev/: all_constraints.h  bct_matrix_replacement.h  bqn_lbfgs.h  constraints.h  h1.h  h1_lbfgs.h  h2.h  hs.h  hs_iterative.h  hs_ncg.h  hs_operators.h  hs_schur.h  l2.h  l2_lbfgs.h  lbfgs.h  operator.h  sparse_factorization.h
include/sobolev/constraints/: barycenter.h  barycenter_components.h  scaling.h  total_area.h  total_volume.h  vertex_normal.h  vertex_pin.h
include/spatial/: bvh_3d.h  bvh_6d.h  bvh_data.h  bvh_flattened.h  bvh_types.h  convolution.h  convolution_kernel.h  data_tree.h  mass_point.h
notes/: pitch.tex  schur.tex  sobolev.aux  sobolev.tex
scenes/: FORMAT.txt
scenes/AlexanderHorned/: scene.txt
scenes/BorromeanRings/: scene.txt
scenes/Boundary/: scene-tall.txt  scene.txt
scenes/BrokenFigureEight/: scene.txt  scene_soft.txt
scenes/Bunny/: \  scene-soft.txt  scene.txt  scene_willmore.txt
scenes/CoarseInterpolation/: scene.txt  scene10.txt  scene100.txt  scene1000.txt
scenes/Collisions/: scene.txt
scenes/DoubleTorusAndRing/: scene.txt
scenes/EntangledDoubleTorus/: boxscene.txt  scene-bench.txt  scene.txt  scene_attractor.txt  scene_soft.txt  scene_willmore.txt  scene_willmore_tpe.txt
scenes/Hamburger/: scene-nobox.txt  scene.txt
scenes/HandcuffsPole/: endscene.txt  scene.txt
scenes/HopfLink/: scene.txt
scenes/KleinBottle/: scene.txt
scenes/Lowres/: scene.txt
scenes/LungGrowing/: scene-lung.txt  scene.txt
scenes/Reconstruction/: scene_bunny.txt  scene_volume.txt
scenes/ShrinkWrap/: scene.txt  scene_area.txt  scene_volume.txt
scenes/SlideOffBar/: scene.txt  scene_beginning.txt  scene_end.txt
scenes/TorusWeaveTest/: scene.txt
scenes/Walnut/: scene.txt
src/: all_pairs_tpe.cpp  bct2_tp_barnes_hut_0.cpp  bct2_tp_multipole_0.cpp  block_cluster_tree.cpp  block_cluster_tree2.cpp  block_cluster_tree2_types.cpp  cluster_tree2.cpp  consistency_helpers.cpp  cut_off_bct.cpp  derivative_assembler.cpp  fractional_laplacian.cpp  interaction_data.cpp  line_search.cpp  main.cpp  main2.cpp  main_consistency.cpp  main_remesh.cpp  main_runtest.cpp  matrix_utils.cpp  metric_term.cpp  obj_writer.cpp  optimized_bct.cpp  optimized_bct_types.cpp  optimized_cluster_tree.cpp  profiler.cpp  scene_file.cpp  sobolev_matrices.cpp  surface_derivatives.cpp  surface_flow.cpp  tp_barnes_hut_0.cpp  tp_multipole_0.cpp  tpe_energy_surface.cpp
src/deprecated/: barnes_hut_tpe_6d.cpp  block_cluster_tree.cpp  static_obstacle.cpp
src/energy/: all_pairs_tpe.cpp  all_pairs_with_bvh.cpp  barnes_hut_newtonian.cpp  barnes_hut_tpe.cpp  barnes_hut_tpe_6d.cpp  barnes_hut_tpe_xdiff.cpp  boundary_curvature.cpp  boundary_length.cpp  coulomb.cpp  implicit_attractor.cpp  implicit_obstacle.cpp  soft_area_constraint.cpp  soft_volume_constraint.cpp  squared_error.cpp  static_obstacle.cpp  total_area_potential.cpp  total_volume_potential.cpp  tp_obstacle_0.cpp  tp_obstacle_all_pairs.cpp  tp_obstacle_all_pairs_pr.cpp  tp_obstacle_barnes_hut_0.cpp  tp_obstacle_barnes_hut_pr_0.cpp  tp_obstacle_cut_off.cpp  tp_obstacle_multipole_0.cpp  tp_obstacle_multipole_nl_0.cpp  tp_obstacle_multipole_pr_0.cpp  tp_pointcloud_obstacle_barnes_hut_0.cpp  tp_pointnormalcloud_obstacle_barnes_hut_0.cpp  tpe_all_pairs.cpp  tpe_all_pairs_pr.cpp  tpe_barnes_hut_0.cpp  tpe_barnes_hut_pr_0.cpp  tpe_cut_off.cpp  tpe_energy_surface.cpp  tpe_kernel.cpp  tpe_multipole_0.cpp  tpe_multipole_nl_0.cpp  tpe_multipole_pr_0.cpp  willmore_energy.cpp
src/implicit/: implicit_surface.cpp  simple_surfaces.cpp
src/remeshing/: dynamic_remesher.cpp  remeshing.cpp
src/sobolev/: bqn_lbfgs.cpp  constraints.cpp  h1.cpp  h1_lbfgs.cpp  h2.cpp  hs.cpp  hs_iterative.cpp  hs_ncg.cpp  hs_schur.cpp  l2_lbfgs.cpp  lbfgs.cpp
src/sobolev/constraints/: barycenter.cpp  barycenter_components.cpp  scaling.cpp  total_area.cpp  total_volume.cpp  vertex_normal.cpp  vertex_pin.cpp
src/spatial/: bvh_3d.cpp  bvh_6d.cpp  bvh_data.cpp  bvh_flattened.cpp  convolution_kernel.cpp
